Refactor: Replace if-else chains with switch expressions for better readability
Signed-off-by: lance <leehaut@gmail.com>